# test

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
tauri-app/: package-lock.json  package.json  tsconfig.json
tauri-app/.cargo/: config.toml
tauri-app/src/: App.vue  main.ts  vite-env.d.ts
tauri-app/src-tauri/: Cargo.toml  resp.txt
tauri-app/src-tauri/src/: client_util.rs  lib.rs  main.rs
