[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suanleme-sdk = { version = "0.9.0", registry = "suanleme" }
suanleme-common = { version = "0.1.24", registry = "suanleme" }
tokio = { version = "1.39.1" }
hyper = "1.4.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6.0"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
bytes = "1.6.1"
base64 = "0.22.1"
async-recursion = "1.1.1"
rsa = "0.9.7"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
rust_decimal = "1.35.0"
lazy_static = "1.5.0"
sys-info = "0.9.0"
rand = "0.8"
structopt = "0.3"
reqwest = "0.11"
chrono = { version = "0.4", features = ["clock"] }
